--- a/package.json
+++ b/package.json
@@ -2,37 +2,31 @@
   "name": "nano-grid-theme",
   "displayName": "Nano Grid Theme",
   "description": "",
-  "version": "0.0.1",
+  "publisher": "jemiguelrivas",
+  "version": "0.1.0",
+  "icon": "img/icon.png",
+  "keywords": [
+    "theme",
+    "nano grid",
+    "dark theme"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/nano-grid/nanogrid-theme"
+  },
   "engines": {
-    "vscode": "^1.71.0"
+    "vscode": "^1.50.0"
   },
   "categories": [
-    "Other"
+    "Themes"
   ],
-  "activationEvents": [
-    "onCommand:nano-grid-theme.helloWorld"
-  ],
-  "main": "./extension.js",
   "contributes": {
-    "commands": [{
-      "command": "nano-grid-theme.helloWorld",
-      "title": "Hello World"
-    }]
-  },
-  "scripts": {
-    "lint": "eslint .",
-    "pretest": "npm run lint",
-    "test": "node ./test/runTest.js"
-  },
-  "devDependencies": {
-    "@types/vscode": "^1.71.0",
-    "@types/glob": "^7.2.0",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "16.x",
-    "eslint": "^8.20.0",
-    "glob": "^8.0.3",
-    "mocha": "^10.0.0",
-    "typescript": "^4.7.4",
-    "@vscode/test-electron": "^2.1.5"
+    "themes": [
+      {
+        "label": "Nano Grid Theme",
+        "uiTheme": "vs-dark",
+        "path": "./themes/nanogrid.json"
+      }
+    ]
   }
 }
